<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
    
    <!-- 타이틀 바 -->
    <RelativeLayout
        android:id="@+id/pref_species_loTitle"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_bar">
        <Button
            android:id="@+id/pref_species_btBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            style="?android:attr/buttonStyleSmall"/>
        
        <TextView
            android:id="@+id/pref_species_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_pref_species"
            android:textColor="#000000"
            android:textSize="20dp"
            />
        
        <Button
            android:id="@+id/pref_species_btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            style="?android:attr/buttonStyleSmall"/>
    </RelativeLayout>
    
    
    <!-- 내용 파트 -->
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@id/pref_species_loTitle"
	    android:orientation="vertical" >
	
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="#00000000"
            android:id="@+id/pref_species_lvSpecies">
            
        </ListView>
	    

	</LinearLayout>
</RelativeLayout>