<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="7dp"
    android:paddingTop="4dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/survey_species_item_tvName"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:paddingLeft="15dp"
            android:gravity="center_vertical"
            android:textSize="25dp"
            android:text="나무 이름"/>
        
        <Button
            android:id="@+id/survey_species_item_btHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="18dp"
            android:text="@string/survey_btHeight"/>
            
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="8dp">
        	<Button
        	    android:id="@+id/survey_species_item_btTree"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_margin="3dp"
	            android:textSize="18dp"
	            android:text="@string/survey_btTree"/>
        	<TextView
        	    android:id="@+id/survey_species_item_tvCountOfTree"
        	    android:layout_width="0dp"
        	    android:layout_weight="1"
        	    android:layout_height="fill_parent"
        	    android:layout_marginTop="5dp"
        	    android:layout_marginBottom="9dp"
        	    android:gravity="center|center_vertical"
        	    android:textSize="25dp"
        	    android:textColor="#000000"
        	    android:text="@string/zero"
        	    android:background="#DDDDDD"/>
        	<Button
        	    android:id="@+id/survey_species_item_btRemove"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_margin="3dp"
	            android:textSize="18dp"
	            android:text="@string/survey_btRemove"/>
        	<TextView
        	    android:id="@+id/survey_species_item_tvCountOfRemove"
        	    android:layout_width="0dp"
        	    android:layout_weight="1"
        	    android:layout_height="fill_parent"
        	    android:layout_marginTop="5dp"
        	    android:layout_marginBottom="9dp"
        	    android:gravity="center|center_vertical"
        	    android:textSize="25dp"
        	    android:textColor="#000000"
        	    android:text="@string/zero"
        	    android:background="#DDDDDD"/>
    </LinearLayout>

</LinearLayout>